# smart-traffic-system

./: CMakeLists.txt  OUTPUT_GUIDE.md  PRESENTATION_GUIDE.md  README.md
include/: Detector.hpp  LaneManager.hpp  SignalController.hpp
models/: convert_to_fp32.py  generate_dummy_onnx.py
src/: Detector.cpp  LaneManager.cpp  SignalController.cpp  main.cpp  test_detector.cpp  test_lane_manager.cpp  test_signal_controller.cpp  verify_dnn.cpp
